--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div class="bg-notag">
-<div class="no-scroll">
+<div class="bg-notag fullscreen">
 <!--
 <div class="container mb-5 " role="main">
   <app-app-navigation></app-app-navigation>
@@ -14,4 +13,3 @@
 </div>
 </div>
 
-</div>
