--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="card bg-light about">
+<div class="card bg-milch about">
   <div class="card-body">
     <div class="col-md-12">
       <div class="row">
@@ -12,7 +12,7 @@
       </div>
 
       <div class="row">
-        <div class="col-4 card text-dark">
+        <div class="col-4 card text-dark bg-milch">
           <h4>Alexander Hödl</h4>
           <h5>Head of Bananenritter</h5>
           <br>
@@ -27,7 +27,7 @@
         </div>
 
         <!--  <div class="card text-dark"> -->
-        <div class="col-4 card text-dark">
+        <div class="col-4 card text-dark bg-milch">
           <h4>Nikolaus Spieß</h4>
           <h5>Head of Heads</h5>
           <br>
@@ -40,7 +40,7 @@
           </p>
 
         </div>
-        <div class="col-4 card text-dark">
+        <div class="col-4 card text-dark bg-milch">
           <h4>Maximilian Steiner</h4>
           <h5>Head of Eggs</h5>
           <br>
