--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,9 +1,8 @@
-<div class="no-scroll" ngClass="dl-darker">
+<div class="flex-container" ngClass="dl-darker">
 
-  <div class="row justify-content-between">
+  <div class="flex-item">
 
 
-    <div class="col-md-6" style="margin: 20% auto;">
       <div class="card-group ">
         <div class="card bg-milch p-4">
           <div class="round" style="margin: 0 auto;">
@@ -49,7 +48,7 @@
           </div>
         </div>
       </div>
-    </div>
+
 
 
   </div>
