--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -44,7 +44,7 @@
 
       <br>
       <br>
-      <accordion>
+      <accordion closeOthers="true">
         <accordion-group panelClass="bg-milch"  heading="Quick booking" isOpen="true" >
           <div *ngIf="hasUserRole == false" >
             No permission to track project times!
