added cards to user edit

--- a/frontend/src/app/components/project-form/project-form.component.html
+++ b/frontend/src/app/components/project-form/project-form.component.html
@@ -1,3 +1,4 @@
+<div class="card bg-milch">
 <form [formGroup]="projectForm" (ngSubmit)="saveProject()">
   <div class="row">
     <div class="col">
@@ -38,3 +39,4 @@
     <a class="btn btn-outline-success navbar-btn" [routerLink]="'/project-management/'">Cancel</a>
   </div>
 </form>
+</div>
