--- a/frontend/src/app/components/user-form/user-form.component.html
+++ b/frontend/src/app/components/user-form/user-form.component.html
@@ -1,3 +1,4 @@
+<div class="card bg-milch ">
 <form [formGroup]="userForm" (ngSubmit)="saveUser()">
     <div class="row ">
       <div class="col">
@@ -56,3 +57,4 @@
       <a class="btn btn-outline-success navbar-btn" [routerLink]="'/user-management/'">Cancel</a>
     </div>
 </form>
+</div>
