--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -7,8 +7,8 @@
       <div class="row justify-content-center">
 
         <div class="column">
-          <a [routerLink]="'/user-form/'">
-          <div class="card">
+          <a class="dash-card"[routerLink]="'/user-form/'">
+          <div class="card bg-milch">
             <br>
             <i class="fas fa-user-plus"></i>
             <br>
@@ -19,10 +19,10 @@
 
 
         <div class="column">
-          <a [routerLink]="'/project-form/'">
-            <div class="card">
+          <a class="dash-card"[routerLink]="'/project-form/'">
+            <div class="card bg-milch">
               <br>
-              <i class="fas fa-user-plus"></i>
+              <i class="fas fa-project-diagram"></i>
               <br>
               <p>Add new Project</p>
             </div>
@@ -30,10 +30,10 @@
         </div>
 
         <div class="column">
-          <a [routerLink]="'/time-tracking/'">
-            <div class="card">
+          <a class="dash-card"[routerLink]="'/time-tracking/'">
+            <div class="card bg-milch">
               <br>
-              <i class="fas fa-user-plus"></i>
+              <i class="fas fa-stopwatch"></i>
               <br>
               <p>Track your project time</p>
             </div>
