--- a/frontend/src/app/components/project-management/project-management.component.html
+++ b/frontend/src/app/components/project-management/project-management.component.html
@@ -22,6 +22,7 @@
   <div class="col-xs-12 col-12">
     <pagination [totalItems]="projects.length"
                 [itemsPerPage]="projectsPerPage"
-                (pageChanged)="pageChanged($event)"></pagination>
+                (pageChanged)="pageChanged($event)">
+    </pagination>
   </div>
 </div>
