changed some buttoncolors

--- a/frontend/src/app/components/project-form/project-form.component.html
+++ b/frontend/src/app/components/project-form/project-form.component.html
@@ -33,10 +33,10 @@
       <textarea rows="5" id="description" type="text" name="description" formControlName="description" class="form-control"></textarea>
     </div>
   </div>
-<br>p
+<br>
   <div class="btn-group">
     <button type="submit" class="btn btn-primary" [disabled]="projectForm.invalid">Save</button>
-    <a class="btn btn-outline-success navbar-btn" [routerLink]="'/project-management/'">Cancel</a>
+    <a class="btn btn-outline-warning navbar-btn" [routerLink]="'/project-management/'">Cancel</a>
   </div>
 </form>
 </div>
