--- a/frontend/src/app/components/user-form/user-form.component.html
+++ b/frontend/src/app/components/user-form/user-form.component.html
@@ -54,7 +54,7 @@
 <br>
     <div class="btn-group">
       <button type="submit" class="btn btn-primary" [disabled]="userForm.invalid">Save</button>
-      <a class="btn btn-outline-success navbar-btn" [routerLink]="'/user-management/'">Cancel</a>
+      <a class="btn btn-outline-warning navbar-btn" [routerLink]="'/user-management/'">Cancel</a>
     </div>
 </form>
 </div>
