--- a/frontend/src/app/components/project-detail/project-detail.component.html
+++ b/frontend/src/app/components/project-detail/project-detail.component.html
@@ -6,7 +6,7 @@
                     buttonLinkName="Back"
                     buttonLink="/project-management"></app-project-info>
 
-  <accordion class="card bg-milc ">
+  <accordion class="card bg-milch ">
     <accordion-group heading="Overview Diagramm" panelClass="bg-milch">
       <div class="card-body bg-milch text-dark" *ngIf="projectTimes.length === 0">
         No tracked times available
