--- a/frontend/src/app/components/time-tracking-form/time-tracking-form.component.html
+++ b/frontend/src/app/components/time-tracking-form/time-tracking-form.component.html
@@ -1,4 +1,6 @@
 <div class="card bg-milch">
+  <div class="card-header"><h2>Time Tracking</h2></div>
+
   <div class="row">
     <div class="col-xs-12 col-12">
       <div class="card-body" >
