--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
 
       <div class="row justify-content-center">
 
-        <div class="column" >
+        <div class="column">
           <a class="dash-card"[routerLink]="'/user-form/'">
           <div class="card bg-milch">
             <br>
@@ -19,7 +19,7 @@
         </div>
 
 
-        <div class="column" >
+        <div class="column">
           <a class="dash-card"[routerLink]="'/project-form/'">
             <div class="card bg-milch">
               <br>
@@ -30,7 +30,7 @@
           </a>
         </div>
 
-        <div class="column" >
+        <div class="column">
           <a class="dash-card"[routerLink]="'/time-tracking/'">
             <div class="card bg-milch">
               <br>
@@ -60,7 +60,7 @@
 
 
         </accordion-group >
-        <accordion-group class="acc" panelClass="bg-milch"  heading="Bookings Overview">
+        <accordion-group panelClass="bg-milch"  heading="Bookings Overview">
           <div class="card bg-milch text-dark" *ngIf="hasUserRole">
             <div *ngIf="chartData.length === 0">
               No tracked times available
