--- a/frontend/src/assets/bootstrap/bootstrap.css
+++ b/frontend/src/assets/bootstrap/bootstrap.css
@@ -3352,7 +3352,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-link:focus, .btn-link.focus {
-  text-decoration: underline;
+  text-decoration: none;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
