--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
+// Concratulations bootstrap & toastr... that's a pitty
+// https://github.com/scttcper/ngx-toastr/issues/605
+#toast-container > div {
+  opacity:1;
+}
+
 @font-face {
   font-family: Warnes-2;
   src: url(assets/fonts/Warnes-Regular.ttf);
