--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
     <div class="col-md-12">
       <div class="row">
-        <h1>About</h1>
+        <h1 class="h1about">About</h1>
         <div class="col-12">
           <p>This project was developed for the course "Software Engineering Selective" at Fachhochschule Joanneum. </p>
           <br>
