--- a/frontend/src/app/components/user-management/user-management.component.html
+++ b/frontend/src/app/components/user-management/user-management.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="card-body">
-    <a class="btn btn-outline-success navbar-btn" [routerLink]="'/user-form/'">New user</a>
+    <a class="btn btn-outline-info navbar-btn" [routerLink]="'/user-form/'">New user</a>
   <br><br>
     <div class="col-md-12">
       <div class="row">
