changed datepicker style

--- a/frontend/src/app/components/time-tracking-list/time-tracking-list.component.html
+++ b/frontend/src/app/components/time-tracking-list/time-tracking-list.component.html
@@ -11,7 +11,7 @@
                        formControlName="filterDate" class="form-control"/>
               </div>
               <div class="col-2 btn-group-sm">
-                <button type="submit" class="btn btn-primary right" [disabled]="filterTimeTrackingForm.invalid">Filter</button>
+                <button type="submit" class="btn btn-outline-success right" [disabled]="filterTimeTrackingForm.invalid">Filter</button>
                 <button class="btn btn-outline-danger right" type="button" (click)="resetFilter()">Reset</button>
               </div>
             </div>
