add file upload functionality for projects.

--- a/frontend/src/app/components/mediainput/mediainput.component.html
+++ b/frontend/src/app/components/mediainput/mediainput.component.html
@@ -22,7 +22,7 @@
           <button type="button" class="btn btn-outline-success" (click)="downloadMedia(media)">
             Download
           </button>
-          <button type="button" class="btn btn-outline-danger" (click)="deleteMedia(i)">
+          <button type="button" class="btn btn-outline-danger" (click)="deleteMedia(media,i)">
             Delete
           </button>
         </div>
