--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -43,7 +43,7 @@
                   Login
                 </button>
               </div>
-              <a href="mailto:alexander.hoedl@edu.fh-joanneum.at?subject=Passwort%20vergessen%20:(&body=Hallo%20Alexander,%0D%0A%0D%0ALeider%20habe%20ich%20mein%20Passwort%20vergessen.%20Kannst%20du%20es%20zurücksetzen?%0D%0A%0D%0ADanke!" >Forgot Password?</a>
+              <a href="mailto:admin@delorean.com?subject=Passwort%20vergessen%20:(&body=Hallo%20,%0D%0A%0D%0ALeider%20habe%20ich%20mein%20Passwort%20vergessen.%20Kannst%20du%20es%20zurücksetzen?%0D%0A%0D%0ADanke!" >Forgot Password?</a>
             </form>
             </div>
           </div>
