--- a/frontend/src/app/components/mediainput/mediainput.component.html
+++ b/frontend/src/app/components/mediainput/mediainput.component.html
@@ -32,5 +32,5 @@
   </table>
   <!-- add accept type -->
 
-  <input if="file-upload" [id]="'field_' + name" type="file" ng2FileSelect [uploader]="uploader" [multiple]="true" [accept]="accept" />
+  <input id="file-upload" [id]="'field_' + name" type="file" ng2FileSelect [uploader]="uploader" [multiple]="true" [accept]="accept" />
 </div>
