--- a/frontend/src/app/components/project-form/project-form.component.html
+++ b/frontend/src/app/components/project-form/project-form.component.html
@@ -1,5 +1,6 @@
 <div class="card bg-milch">
-  <div class="card-header"><h2>Create New Project</h2></div>
+  <div *ngIf="isEditMode == true" class="card-header"><h2>Edit Project</h2></div>
+  <div *ngIf="isEditMode == false" class="card-header"><h2>Create New Project</h2></div>
 <form [formGroup]="projectForm" (ngSubmit)="saveProject()">
   <div class="row">
     <div class="col">
